--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
                 </tr>
             </tbody>
         </table>
+        <br>
+        <h2>Utilització colspan</h2>
+        <table class="mitabla">
+            <tr>
+                <td>Element 1</td>
+                <td>Element 2</td>
+            </tr>
+            <tr>
+                <td>Element 3</td>
+                <td>Element 4</td>
+            </tr>
+        </table>
     </main>
 </body>
 </html>
