--- a/index.html
+++ b/index.html
@@ -45,11 +45,21 @@
         <h2>Utilització colspan</h2>
         <table class="mitabla">
             <tr>
-                <td>Element 1</td>
-                <td>Element 2</td>
+                <td colspan="2">Element 1 i Element 2</td>
             </tr>
             <tr>
                 <td>Element 3</td>
+                <td>Element 4</td>
+            </tr>
+        </table>
+        <br>
+        <h2>Utilització rowspan</h2>
+        <table class="mitabla">
+            <tr>
+                <td rowspan="2">Element 1 i Element 3</td> 
+                <td>Element 2</td>
+            </tr>
+            <tr>
                 <td>Element 4</td>
             </tr>
         </table>
